--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "apollo-server": "^2.0.7",
     "dotenv": "^6.0.0",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "mongoose": "^5.2.15"
   }
 }
