--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "babel-node .",
     "start:dev": "nodemon --exec babel-node . --inspect",
     "lint": "eslint *.js",
-    "test": "test"
+    "test:integration": "ava ./tests/integration/*.js --verbose"
   },
   "repository": {
     "type": "git",
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/arrecadar/api#readme",
   "devDependencies": {
+    "ava": "^0.25.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^5.5.0",
     "eslint-config-pagarme-base": "^2.0.0",
     "eslint-plugin-import": "^2.14.0",
+    "node-fetch": "^2.2.0",
     "nodemon": "^1.18.4"
   },
   "dependencies": {
