--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "apollo-server-koa": "^2.0.7",
     "dotenv": "^6.0.0",
     "graphql": "^14.0.2",
+    "graphql-custom-types": "^1.4.0",
     "koa": "^2.5.3",
     "mongoose": "^5.2.15"
   }
