--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "graphql-custom-types": "^1.4.0",
     "jsonwebtoken": "^8.3.0",
     "koa": "^2.5.3",
-    "mongoose": "^5.2.15"
+    "mongoose": "^5.2.15",
+    "nodemailer": "^4.6.8"
   }
 }
