--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "apollo-server-koa": "^2.0.7",
     "dotenv": "^6.0.0",
+    "firebase-admin": "^6.2.0",
     "graphql": "^14.0.2",
     "graphql-custom-types": "^1.4.0",
     "koa": "^2.5.3",
